--- a/public/style.css
+++ b/public/style.css
@@ -86,7 +86,7 @@ html {
 
 #left_side_nav,
 #main_container {
-  height: 100vh;
+  height: 50vh;
   padding-top: 30px;
   text-indent: 20px;
 }
@@ -171,13 +171,16 @@ html {
 
 #main_container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  padding-right: 500px;
+  padding-right: 200px;
 }
 
 #main_container_tasks {
   display: flex;
-  padding-right: 300px;
+  min-width: max-content;
+  flex-wrap: wrap;
+  padding-right: 200px;
 }
 
 .card {
@@ -215,7 +218,7 @@ html {
   margin-right: 5px;
 }
 
-.sidebar{
+.sidebar {
   position: fixed;
   top: 0;
   left: 0;
@@ -224,7 +227,7 @@ html {
   background-color: rgb(62, 67, 76);
   padding: 6px 14px;
 }
-.sidebar .collapsable{
+.sidebar .collapsable {
   color: white;
   display: flex;
   height: 50px;
@@ -234,9 +237,9 @@ html {
   font-weight: bold;
   margin-top: 30px;
 }
-.sidebar #btn{
-  position:absolute;
-  top:40px;
+.sidebar #btn {
+  position: absolute;
+  top: 40px;
   color: white;
   left: 85%;
   font-size: 30px;
@@ -246,12 +249,12 @@ html {
   line-height: 50px;
   transform: translatex(-50%);
 }
-.sidebar ul{
-  margin-top:20px;
+.sidebar ul {
+  margin-top: 20px;
 }
-.sidebar ul li{
+.sidebar ul li {
   position: relative;
-  height:50px;
+  height: 50px;
   width: 100%;
   margin: 0 5px;
   list-style: none;
@@ -261,15 +264,15 @@ html {
   font-weight: bold;
 }
 
-.sidebar ul li .popup{
+.sidebar ul li .popup {
   position: absolute;
   left: 122px;
   top: 0;
   transform: translateY(-50%);
-  border-radius:6px;
+  border-radius: 6px;
   height: 35px;
   width: 122px;
-  background:whitesmoke;
+  background: whitesmoke;
   line-height: 35px;
   text-align: center;
   box-shadow: 0px 5px 10px rgba(132, 139, 200, 0.18);
@@ -277,12 +280,12 @@ html {
   opacity: 0;
   pointer-events: none;
 }
-.sidebar ul li:hover .popup{
-  transition: all .5s ease-in-out;
+.sidebar ul li:hover .popup {
+  transition: all 0.5s ease-in-out;
   opacity: 1;
-  top:50%;
+  top: 50%;
 }
-.sidebar ul li a{
+.sidebar ul li a {
   color: white;
   display: flex;
   align-items: center;
@@ -290,16 +293,13 @@ html {
   transition: all 0.5s ease-in-out;
 }
 
-.sidebar ul li a:hover{
-  background:lightcoral;
-
+.sidebar ul li a:hover {
+  background: lightcoral;
 }
-sidebar ul li a i{
-  height:50px;
+sidebar ul li a i {
+  height: 50px;
   min-width: 50px;
   border-radius: 12px;
-  line-height:50px;
+  line-height: 50px;
   text-align: center;
 }
-
-
