--- a/Views/tasks.ejs
+++ b/Views/tasks.ejs
@@ -214,6 +214,7 @@
                                 <select
                                   class="form-select"
                                   aria-label="Default select example"
+                                  name=""
                                 >
                                   <option selected>
                                     Open this select menu
