corrected nav bar and side bar per screens

--- a/Views/calendar.ejs
+++ b/Views/calendar.ejs
@@ -23,8 +23,8 @@
         <p>TODO_APP</p>
       </div>
       <div class="col-10" id="nav_item">
-        <p class="nav_item"><a href="home.html">Home</a></p>
-        <p class="nav_item"><a href="about.html">About</a></p>
+        <p class="nav_item"><a href="../public/home.html">Home</a></p>
+        <p class="nav_item"><a href="../public/about.html">About</a></p>
         <p class="nav_item"><a href="projects.ejs">Application</a></p>
       </div>
     </div>
@@ -81,12 +81,12 @@
         <ul class="navbar-nav">
           <!-- link for home -->
           <li class="nav-item active">
-            <a class="nav-link active" href="./Views/home.html">Home</a>
+            <a class="nav-link active" href="../public/home.html">Home</a>
           </li>
 
           <!-- link for about -->
           <li class="nav-item active">
-            <a class="nav-link active" href="./Views/about.html">About</a>
+            <a class="nav-link active" href="../public/about.html">About</a>
           </li>
 
           <!-- link for login
