--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -93,12 +93,12 @@
         <ul class="navbar-nav">
           <!-- link for home -->
           <li class="nav-item active">
-            <a class="nav-link active" href="./Views/home.html">Home</a>
+            <a class="nav-link active" href="../public/home.html">Home</a>
           </li>
 
           <!-- link for about -->
           <li class="nav-item active">
-            <a class="nav-link active" href="./Views/about.html">About</a>
+            <a class="nav-link active" href="../public/about.html">About</a>
           </li>
 
           <!-- link for login
