--- a/Views/recycle_bin.ejs
+++ b/Views/recycle_bin.ejs
@@ -50,12 +50,15 @@
 
 			<div class="col-9" id="main_container">
 				<div class="table">
+					<h4>Tasks</h4>
 					<table class="table table-striped table-bordered table-hover">
 						<thead class="thead-dark">
 							<tr>
 								<th scope="col">File name</th>
 								<th scope="col">Type</th>
+								<th scope="col">id</th>
 								<th scope="col">project_id</th>
+								<th scope="col">task_id</th>
 								<th scope="col">Delete file</th>
 								<th scope="col">Restore file</th>
 							</tr>
@@ -66,7 +69,10 @@
 							<tr>
 								<td><%= recycle_bin[i].title %></td>
 								<td><%= recycle_bin[i].type %></td>
+								<td><%= recycle_bin[i]._id %></td>
 								<td><%= recycle_bin[i].project_id %></td>
+								<td><%= recycle_bin[i].task_id %></td>
+
 								<td>
 									<a href="<%= `/recycle_bin/delete/${recycle_bin[i]._id}` %>"
 										>Remove</a
@@ -74,6 +80,46 @@
 								</td>
 								<td>
 									<a href="<%= `/recycle_bin/restore/${recycle_bin[i]._id}` %>"
+										>Restore</a
+									>
+								</td>
+							</tr>
+							<% } %>
+						</tbody>
+					</table>
+					<br /><br /><br />
+					<h4>Projects</h4>
+					<table class="table table-striped table-bordered table-hover">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">File name</th>
+								<th scope="col">Type</th>
+								<th scope="col">id</th>
+								<th scope="col">project_id</th>
+								<th scope="col">task_id</th>
+								<th scope="col">Delete file</th>
+								<th scope="col">Restore file</th>
+							</tr>
+						</thead>
+
+						<tbody>
+							<% for(var i = 0; i < recycle_bin_projects.length; i++) {%>
+							<tr>
+								<td><%= recycle_bin_projects[i].title %></td>
+								<td><%= recycle_bin_projects[i].type %></td>
+								<td><%= recycle_bin_projects[i]._id %></td>
+								<td><%= recycle_bin_projects[i].project_id %></td>
+								<td><%= recycle_bin_projects[i].task_id %></td>
+
+								<td>
+									<a
+										href="<%= `/recycle_bin/delete/${recycle_bin_projects[i]._id}` %>"
+										>Remove</a
+									>
+								</td>
+								<td>
+									<a
+										href="<%= `/recycle_bin/restore/${recycle_bin_projects[i]._id}` %>"
 										>Restore</a
 									>
 								</td>
