checnges to delete task functional

--- a/Views/tasks.ejs
+++ b/Views/tasks.ejs
@@ -427,11 +427,7 @@
                             >
                               Cancel
                             </button>
-                            <input
-                              type="submit"
-                              class="btn btn-danger"
-                              value="Remove"
-                            />
+                            <a href="/tasks/delete/<%= tasks[i]._id %>/<%= tasks[i].project_id %>">REMOVE</a>
                           </div>
                         </div>
                       </div>
@@ -624,11 +620,7 @@
                             >
                               Cancel
                             </button>
-                            <input
-                              type="submit"
-                              class="btn btn-danger"
-                              value="Remove"
-                            />
+                            <a href="/tasks/delete/<%= tasks[i]._id %>/<%= tasks[i].project_id %>">REMOVE</a>
                           </div>
                         </div>
                       </div>
@@ -770,11 +762,7 @@
                                 >
                                   Cancel
                                 </button>
-                                <input
-                                  type="submit"
-                                  class="btn btn-warning"
-                                  value="Edit"
-                                />
+                                <a href="/tasks/delete/<%= tasks[i]._id %>/<%= tasks[i].project_id %>">REMOVE</a>
                               </div>
                             </form>
                           </div>
